<resources>
    <string name="app_name">Paywallet</string>
    <string name="Group">Group</string>
    <string name="Friends">Friends</string>
    <string name="Activity">Activity</string>
    <string name="Profile">Profile</string>
    <string name="nuevo_grupo">Nuevo Grupo</string>
    <string name="registrar_grupo">Registrar Grupo</string>
    <string name="nombre_del_grupo">Nombre del Grupo:</string>
    <string name="crear">Crear</string>
    <string name="participantes">Participantes:</string>
    <string name="imgadaplistgrupo_fotogrupo">imgAdapListGrupo_FotoGrupo</string>
    <string name="eliminar_grupo">Eliminar Grupo</string>
    <string name="mis_amigos">Mis amigos</string>
    <string name="amigos">Amigos</string>
    <string name="agregar_amigo">Agregar Amigo</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="todo">TODO</string>
    <string name="mi_actividad">Mi Actividad</string>
    <string name="agregar_gasto">Agregar Gasto</string>
    <string name="guardar">Guardar</string>
    <string name="ingrese_el_monto">Ingrese el monto</string>
    <string name="ingrese_el_usuario">Ingrese el usuario</string>
    <string name="monto">Monto</string>
    <string name="tipo_actividad">TIpo Actividad</string>
    <string name="a_adir_usuario">añadir usuario</string>
    <string name="cambiar_nombre">Cambiar nombre</string>
    <string name="monto_general_s_1000000">Monto General: S/.1000000</string>
</resources>